--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		padding-left:60px;
 		padding-right:60px;
 		color: black;
-        text-align: justified;
+        text-align: justify;
         font-size: 35px;
         }
      h2 {
@@ -126,7 +126,7 @@
      <h4>ETAPAS  DE  LA  INDEPENDENCIA</h4>
       <p>De acuerdo con los especialistas, el estudio del desarrollo histórico de este importante movimiento revolucionario se puede entender mejor si se revisan, detenidamente, los siguientes cuatro momentos o etapas más trascendentales:</p>
 	  <p>La guerra por la independencia mexicana duró 11 años, las etapas en las que suele ser dividido este periodo histórico son cuatro: iniciación, organización y definición, resistencia y consumación. Los periodos de cada una de estas etapas se establecieron de acuerdo con la naturaleza y el alcance de los hechos ocurridos.</p>
-	  <CENTER><img src="ETAPAS.jpg" width="60%"></center>
+	  <CENTER><img src="etapas.jpg" width="60%"></center>
 	 <h5>PRIMERA  ETAPA</h5>
 	  <p>Abarca desde el Grito de Dolores (16 de septiembre de 1810) hasta la batalla de Puente de Calderón (en el actual municipio de Zapotlanejo, Jalisco, el 17 de enero de 1811), cuando la muchedumbre dirigida por Hidalgo -con su famoso estandarte guadalupano en mano- peleaba con más pasión y arrojo que estrategia.</p>
       <p>En este momento, cuando el cura de Dolores llegó a su cita con la historia en el Puente, sus fuerzas se calculan en alrededor de cien mil hombres (entre criollos, indios, mestizos y gente de las castas). Por su parte, los realistas, soldados leales al virrey y a la corona española, debían rondar entre los 50 mil efectivos.</p>
